k8s/targeting-service/targeting-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting-ns
spec:
  type: ClusterIP
  selector:
    app: targeting-service
  ports:
    - name: http
      port: 80
      targetPort: 8003
